--- a/lesson-course-corporate.html
+++ b/lesson-course-corporate.html
@@ -22,7 +22,8 @@
 	<meta name="robots" content="ALL">
 	<meta name="keywords" content="英会話　神戸, 英会話　三宮, 　英会話　マンツーマン, 英会話サンミハールランゲージサービス　サンミハール, Sun Mihall, Sunmihall">
 	<meta name="author" content="神戸・三宮の英会話サンミハールランゲージサービス">
-	<meta name="Description" content="TOEFL、IELTS対策なら神戸三宮の英会話スクール、サンミハールランゲージサービス。授業はネイティブ。またカウンセリングは日本人スタッフと楽しく目標達成まで毎回でも無料。日常英会話上達と英検、TOEIC、TOEFL、IELTS他試験対策を同時に学べます。マンツーマン月謝制とチケット制が選べるスクールでお得にレッスン。無料体験レッスン受付中！" />
+	<meta name="Description" content="TOEFL、IELTS対策なら神戸三宮の英会話スクール、サンミハールランゲージサービス。授業はネイティブ。またカウンセリングは日本人スタッフと楽しく目標達成まで毎回でも無料。日常英会話上達と英検、TOEIC、TOEFL、IELTS他試験対策を同時に学べます。マンツーマン月謝制とチケット制が選べるスクールでお得にレッスン。無料体験レッスン受付中！"
+	/>
 
 	<meta property="og:title" content="神戸・三宮の英会話サンミハールランゲージサービス">
 	<meta property="og:type" content="school">
@@ -34,11 +35,14 @@
 
 	<title>サンミハール　| 英会話　神戸　三宮　マンツーマン 英会話サンミハール | 神戸・三宮の英会話サンミハールランゲージサービス</title>
 
-	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'
+	/>
 
 	<!--     Fonts and icons     -->
-	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
+	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"
+	/>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"
+	/>
 
 	<!-- CSS Files -->
 	<link href="assets/css/bootstrap.min.css" rel="stylesheet" />
@@ -69,7 +73,8 @@
 					<span class="icon-bar"></span>
 				</button>
 				<a class="navbar-brand" href="index.html">
-					<img id="sunmihall-logo" src="assets/img/navbar-logo-white.png" alt="神戸・三宮の英会話サンミハールランゲージサービス" height="120%" width="auto">
+					<img id="sunmihall-logo" src="assets/img/navbar-logo-white.png" alt="神戸・三宮の英会話サンミハールランゲージサービス" height="120%"
+					  width="auto">
 				</a>
 			</div>
 
@@ -421,17 +426,13 @@
 											またサンミハールの英文校正は、文章の作者と担当者が内容について電話で話すことも出来、正確でネイティブスピーカーに分り易い文章を作成します。
 										</p>
 										<h4>普通料金　発注より3営業日納品～　10円～22円/単語 （消費税8％別途）　※納期は都度確認をお願します</h4>
-										<p>※単語量が多い場合は上記以上に日数を要する場合がございます。200単語程度の場合は翌日納品可能な場合もありますが、別途お見積りになります。<br>
-											お見積りは無料です。お気軽にお問い合わせください。
+										<p>※単語量が多い場合は上記以上に日数を要する場合がございます。200単語程度の場合は翌日納品可能な場合もありますが、別途お見積りになります。<br> お見積りは無料です。お気軽にお問い合わせください。
 										</p>
 										<h4>
 											サービス内容
 										</h4>
 										<p>
-											★ ビジネス文書、会議用文書、研究発表用文書<br>
-											★ 各種学会発表用文書（医学学会等）<br>
-											★ チラシ、ポスター、パンフレット、メニュー<br>
-											★ その他、あらゆる英文文書の校正を致します
+											★ ビジネス文書、会議用文書、研究発表用文書<br> ★ 各種学会発表用文書（医学学会等）<br> ★ チラシ、ポスター、パンフレット、メニュー<br> ★ その他、あらゆる英文文書の校正を致します
 										</p>
 										<h4>実績</h4>
 										<p>医学論文の英文校正、国公立大学ホームページの英文校正、スポーツ用品メーカーポスター英文校正、大学文学部教授の論文他多数。</p>
@@ -457,7 +458,7 @@
 
 		<!--     *********    PRICING    *********      -->
 
-		<div class="cd-section" id="pricing">
+		<!-- <div class="cd-section" id="pricing">
 
 			<div class="pricing-5 section-gray" id="pricing-5 lessons">
 
@@ -616,10 +617,10 @@
 
 					</div>
 				</div>
-				<!-- container -->
+				 container 
 
 			</div>
-		</div>
+		</div> -->
 
 		<!--     *********    END PRICING     *********      -->
 
