--- a/lesson-course-travel.html
+++ b/lesson-course-travel.html
@@ -22,7 +22,8 @@
 	<meta name="robots" content="ALL">
 	<meta name="keywords" content="英会話　神戸, 英会話　三宮, 　英会話　マンツーマン, 英会話サンミハールランゲージサービス　サンミハール, Sun Mihall, Sunmihall">
 	<meta name="author" content="神戸・三宮の英会話サンミハールランゲージサービス">
-	<meta name="Description" content="留学準備なら神戸三宮の英会話スクール、サンミハールランゲージサービス。授業はネイティブ。またカウンセリングは日本人スタッフと楽しく目標達成まで毎回でも無料。ホームステイ先の選択もお手伝いします。帰国子女や子供、中高生の英会話も。マンツーマン月謝制とチケット制が選べるスクールでお得にレッスン。無料体験レッスン受付中！" />
+	<meta name="Description" content="留学準備なら神戸三宮の英会話スクール、サンミハールランゲージサービス。授業はネイティブ。またカウンセリングは日本人スタッフと楽しく目標達成まで毎回でも無料。ホームステイ先の選択もお手伝いします。帰国子女や子供、中高生の英会話も。マンツーマン月謝制とチケット制が選べるスクールでお得にレッスン。無料体験レッスン受付中！"
+	/>
 
 	<meta property="og:title" content="神戸・三宮の英会話サンミハールランゲージサービス">
 	<meta property="og:type" content="school">
@@ -34,11 +35,14 @@
 
 	<title>サンミハール　| 英会話　神戸　三宮　マンツーマン 英会話サンミハール | 神戸・三宮の英会話サンミハールランゲージサービス</title>
 
-	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'
+	/>
 
 	<!--     Fonts and icons     -->
-	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
+	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"
+	/>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"
+	/>
 
 	<!-- CSS Files -->
 	<link href="assets/css/bootstrap.min.css" rel="stylesheet" />
@@ -69,7 +73,8 @@
 					<span class="icon-bar"></span>
 				</button>
 				<a class="navbar-brand" href="index.html">
-					<img id="sunmihall-logo" src="assets/img/navbar-logo-white.png" alt="神戸・三宮の英会話サンミハールランゲージサービス" height="120%" width="auto">
+					<img id="sunmihall-logo" src="assets/img/navbar-logo-white.png" alt="神戸・三宮の英会話サンミハールランゲージサービス" height="120%"
+					  width="auto">
 				</a>
 			</div>
 
@@ -377,24 +382,12 @@
 										<ul>
 											<li>
 												<h4>語学留学</h4>
-												<p>海外の語学学校で学びたい方が出発までに最低限知っておきたい内容を学びます。<br>
-													★ クラスでの英会話・・・あいさつ、自己紹介、校内の道順、教師への質問、クラスでの発言、文法用語、メールなど<br>
-													★ 日常生活の英会話・・・乗り物、道順、レストラン、ショッピング、ホテル、電話、クレーム、依頼など<br>
-													★ 緊急時の英会話・・・荷物の紛失、事故、病気のときの薬局、病院での会話など<br>
-													★ ホームステイ先での英会話・・・シャワーや食事、洗濯のルール、お手伝い、休日のアクティビティ、日帰り旅行など<br>
-													★ 渡航先の文化や慣習について<br>
-													★ 日本文化について
+												<p>海外の語学学校で学びたい方が出発までに最低限知っておきたい内容を学びます。<br> ★ クラスでの英会話・・・あいさつ、自己紹介、校内の道順、教師への質問、クラスでの発言、文法用語、メールなど<br>													★ 日常生活の英会話・・・乗り物、道順、レストラン、ショッピング、ホテル、電話、クレーム、依頼など<br> ★ 緊急時の英会話・・・荷物の紛失、事故、病気のときの薬局、病院での会話など<br>													★ ホームステイ先での英会話・・・シャワーや食事、洗濯のルール、お手伝い、休日のアクティビティ、日帰り旅行など<br> ★ 渡航先の文化や慣習について<br> ★ 日本文化について
 												</p>
 											</li>
 											<li>
 												<h4>語学留学</h4>
-												<p>海外の語学学校で学びたい方が出発までに最低限知っておきたい内容を学びます。<br>
-													★ クラスでの英会話・・・あいさつ、自己紹介、校内の道順、教師への質問、クラスでの発言、文法用語、メールなど<br>
-													★ 日常生活の英会話・・・乗り物、道順、レストラン、ショッピング、ホテル、電話、クレーム、依頼など<br>
-													★ 緊急時の英会話・・・荷物の紛失、事故、病気のときの薬局、病院での会話など<br>
-													★ ホームステイ先での英会話・・・シャワーや食事、洗濯のルール、お手伝い、休日のアクティビティ、日帰り旅行など<br>
-													★ 渡航先の文化や慣習について<br>
-													★ 日本文化について
+												<p>海外の語学学校で学びたい方が出発までに最低限知っておきたい内容を学びます。<br> ★ クラスでの英会話・・・あいさつ、自己紹介、校内の道順、教師への質問、クラスでの発言、文法用語、メールなど<br>													★ 日常生活の英会話・・・乗り物、道順、レストラン、ショッピング、ホテル、電話、クレーム、依頼など<br> ★ 緊急時の英会話・・・荷物の紛失、事故、病気のときの薬局、病院での会話など<br>													★ ホームステイ先での英会話・・・シャワーや食事、洗濯のルール、お手伝い、休日のアクティビティ、日帰り旅行など<br> ★ 渡航先の文化や慣習について<br> ★ 日本文化について
 												</p>
 											</li>
 											<li>
@@ -442,9 +435,7 @@
 											<li>
 												<h4>レッスン内容の例</h4>
 												<p>
-													★ 海外の学校で習っていた教科書を使ってその続きの勉強<br>
-													★ 会話力のみの保持を目的とした日常英会話のレッスン<br>
-													★ 将来の海外進学を視野に入れての読み書きの授業
+													★ 海外の学校で習っていた教科書を使ってその続きの勉強<br> ★ 会話力のみの保持を目的とした日常英会話のレッスン<br> ★ 将来の海外進学を視野に入れての読み書きの授業
 												</p>
 											</li>
 										</ul>
@@ -487,13 +478,7 @@
 											<li>
 												<h4>レッスン内容の例</h4>
 												<p>
-													★ ピクチャーディクショナリーを使用した単語やフレーズの練習<br>
-													★ フォニックスや発音記号を使った読み方、綴り方の練習<br>
-													★ 子供向け日常英会話のテキストを使った会話練習<br>
-													★ 今流行っているゲームの登場人物を使ってのロールプレイ練習<br>
-													★ 英語の歌詞の練習<br>
-													★ 中学校の英語の教科書をもとにした会話の練習<br>
-													★ 受験に向けての対策や文法等、英語全般のレッスン
+													★ ピクチャーディクショナリーを使用した単語やフレーズの練習<br> ★ フォニックスや発音記号を使った読み方、綴り方の練習<br> ★ 子供向け日常英会話のテキストを使った会話練習<br>													★ 今流行っているゲームの登場人物を使ってのロールプレイ練習<br> ★ 英語の歌詞の練習<br> ★ 中学校の英語の教科書をもとにした会話の練習<br> ★ 受験に向けての対策や文法等、英語全般のレッスン
 												</p>
 												<p>神戸三宮で子供英会話をと思われたなら、子供達の個性を重視してマンツーマンで学べるサンミハールへ。中高生の英語試験対策、受験英語対策もお任せください。</p>
 											</li>
@@ -519,7 +504,7 @@
 
 		<!--     *********    PRICING    *********      -->
 
-		<div class="cd-section" id="pricing">
+		<!-- <div class="cd-section" id="pricing">
 			<div class="pricing-5 section-gray" id="pricing-5 lessons">
 
 				<div class="container">
@@ -679,10 +664,10 @@
 					</div>
 
 				</div>
-				<!-- container -->
+				 container
 
 			</div>
-		</div>
+		</div> -->
 
 		<!--     *********    END PRICING     *********      -->
 
