--- a/lesson-course-medical.html
+++ b/lesson-course-medical.html
@@ -22,7 +22,8 @@
 	<meta name="robots" content="ALL">
 	<meta name="keywords" content="英会話　神戸, 英会話　三宮, 　英会話　マンツーマン, 英会話サンミハールランゲージサービス　サンミハール, Sun Mihall, Sunmihall">
 	<meta name="author" content="神戸・三宮の英会話サンミハールランゲージサービス">
-	<meta name="Description" content="医療英会話・病院の英語なら神戸三宮の英会話スクール、サンミハールランゲージサービス。授業はネイティブ。またカウンセリングは日本人スタッフと楽しく目標達成まで毎回でも無料。医師、看護師、薬剤師、病院受付業務、製薬会社勤務の方々の英語。マンツーマン月謝制とチケット制が選べるスクールでお得にレッスン。無料体験レッスン受付中！" />
+	<meta name="Description" content="医療英会話・病院の英語なら神戸三宮の英会話スクール、サンミハールランゲージサービス。授業はネイティブ。またカウンセリングは日本人スタッフと楽しく目標達成まで毎回でも無料。医師、看護師、薬剤師、病院受付業務、製薬会社勤務の方々の英語。マンツーマン月謝制とチケット制が選べるスクールでお得にレッスン。無料体験レッスン受付中！"
+	/>
 
 	<meta property="og:title" content="神戸・三宮の英会話サンミハールランゲージサービス">
 	<meta property="og:type" content="school">
@@ -34,11 +35,14 @@
 
 	<title>神戸英会話なら三宮のサンミハール｜医療英会話・病院の英語</title>
 
-	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'
+	/>
 
 	<!--     Fonts and icons     -->
-	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
+	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"
+	/>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"
+	/>
 
 	<!-- CSS Files -->
 	<link href="assets/css/bootstrap.min.css" rel="stylesheet" />
@@ -69,7 +73,8 @@
 					<span class="icon-bar"></span>
 				</button>
 				<a class="navbar-brand" href="index.html">
-					<img id="sunmihall-logo" src="assets/img/navbar-logo-white.png" alt="神戸・三宮の英会話サンミハールランゲージサービス" height="120%" width="auto">
+					<img id="sunmihall-logo" src="assets/img/navbar-logo-white.png" alt="神戸・三宮の英会話サンミハールランゲージサービス" height="120%"
+					  width="auto">
 				</a>
 			</div>
 
@@ -447,7 +452,7 @@
 
 		<!--     *********    PRICING    *********      -->
 
-		<div class="cd-section" id="pricing">
+		<!-- <div class="cd-section" id="pricing">
 
 			<div class="pricing-5 section-gray" id="pricing-5 lessons">
 
@@ -608,10 +613,10 @@
 					</div>
 
 				</div>
-				<!-- container -->
+				 container
 
 			</div>
-		</div>
+		</div> -->
 
 		<!--     *********    END PRICING    *********      -->
 
