--- a/pricing.html
+++ b/pricing.html
@@ -22,7 +22,8 @@
 	<meta name="robots" content="ALL">
 	<meta name="keywords" content="英会話　神戸, 英会話　三宮, 　英会話　マンツーマン, 英会話サンミハールランゲージサービス　サンミハール, Sun Mihall, Sunmihall">
 	<meta name="author" content="神戸・三宮の英会話サンミハールランゲージサービス">
-	<meta name="Description" content="英会話なら神戸・三宮のサンミハールランゲージサービス。教室は元町からも5分。医療、航空、貿易、ビジネス、留学そしてやり直しの英語をマンツーマンで効果的に。授業はネイティブ。またカウンセリングは日本人スタッフと楽しく目標達成まで毎回でも無料。日常英会話上達。英検、TOEIC、TOEFL、IELTS他試験対策も万全です。マンツーマン月謝制とチケット制が選べるスクールでお得にレッスン。神戸三宮で無料体験レッスン受付中！" />
+	<meta name="Description" content="英会話なら神戸・三宮のサンミハールランゲージサービス。教室は元町からも5分。医療、航空、貿易、ビジネス、留学そしてやり直しの英語をマンツーマンで効果的に。授業はネイティブ。またカウンセリングは日本人スタッフと楽しく目標達成まで毎回でも無料。日常英会話上達。英検、TOEIC、TOEFL、IELTS他試験対策も万全です。マンツーマン月謝制とチケット制が選べるスクールでお得にレッスン。神戸三宮で無料体験レッスン受付中！"
+	/>
 
 	<meta property="og:title" content="神戸・三宮の英会話サンミハールランゲージサービス">
 	<meta property="og:type" content="school">
@@ -33,12 +34,15 @@
 
 	<title>サンミハール　| 英会話　神戸　三宮　マンツーマン 英会話サンミハール | 神戸・三宮の英会話サンミハールランゲージサービス</title>
 
-	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'
+	/>
 
 	<!--     Fonts and icons     -->
 	<link rel="
-	  stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
+	  stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"
+	/>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"
+	/>
 
 	<!-- CSS Files -->
 	<link href="assets/css/bootstrap.min.css" rel="stylesheet" />
@@ -69,7 +73,8 @@
 					<span class="icon-bar"></span>
 				</button>
 				<a class="navbar-brand" href="index.html">
-					<img id="sunmihall-logo" src="assets/img/navbar-logo-white.png" alt="神戸・三宮の英会話サンミハールランゲージサービス" height="120%" width="auto">
+					<img id="sunmihall-logo" src="assets/img/navbar-logo-white.png" alt="神戸・三宮の英会話サンミハールランゲージサービス" height="120%"
+					  width="auto">
 				</a>
 			</div>
 
@@ -458,131 +463,113 @@
 
 		<!--     *********     END PRICING TABLES     *********      -->
 
-		<hr />
+		<hr>
 
+		<!--     *********     DAILY SCHEDULE     *********      -->
 
+		<div class="section">
 
-		<!--     *********     FAQ     *********      -->
-		<div class="container">
+			<div class="container">
 
+				<h2 class="text-center title">時間割</h2>
 
-			<div class="features-2">
-				<div class="text-center">
-					<h4>神戸・三宮の英会話サンミハールランゲージサービスの</h4>
-					<h3 class="title">英会話Q&A</h3>
-				</div>
+				<h4 class="text-center u-margin-bottom-small">
+					40分／回
+					<br> 月～金曜日：11：30～8：25
+					<br> 土曜日：10：00～6：55
+					<br> ※ 日、祝日はお休みです
+				</h4>
+
 				<div class="row">
-					<div class="col-md-4 col-md-offset-2">
-						<div class="info info-horizontal">
-							<div class="icon icon-info">
-								<i class="material-icons">assignment</i>
-							</div>
-							<div class="description">
-								<h4 class="info-title">Q.　初心者でも大丈夫ですか？</h4>
-								<p>
-									A.　はい。大丈夫です。サンミハールには英語ネイティブのバイリンガル講師が在籍しています。また、もっと詳しく日本語で説明が聞きたい時は日本人スタッフが無料でサポートします。
-								</p>
-							</div>
-						</div>
-
+					<div class="col-md-3">
+						<table class="schedule">
+							<tr class="schedule__content">
+								<td>1時間目</td>
+								<td>10:00 - 10:40</td>
+							</tr>
+							<tr class="schedule__content">
+								<td>2時間目</td>
+								<td>10:45 - 11:25</td>
+							</tr>
+							<tr class="schedule__content">
+								<td>3時間目</td>
+								<td>11:30 - 12:10</td>
+							</tr>
+							<tr class="schedule__content">
+								<td>4時間目</td>
+								<td>12:15 - 12:55</td>
+							</tr>
+						</table>
 					</div>
-
-					<div class="col-md-4">
-						<div class="info info-horizontal">
-							<div class="icon icon-success">
-								<i class="material-icons">assignment_turned_in</i>
-							</div>
-							<div class="description">
-								<h4 class="info-title">Q.　当日突然行けなくなったらどうなりますか？</h4>
-								<p>
-									A.　急に来れなくなっても授業を受けられます。まずその日の違う時間に変更が出来ます。他の時間が難しくてもその場所からお電話やWEBでもレッスンが出来ます。
-								</p>
-							</div>
-						</div>
+					<div class="col-md-3">
+						<table class="schedule">
+							<tr class="schedule__content">
+								<td>5時間目</td>
+								<td>13:00 - 13:40</td>
+							</tr>
+							<tr class="schedule__content">
+								<td>6時間目</td>
+								<td>13:45 - 14:25</td>
+							</tr>
+							<tr class="schedule__content">
+								<td>7時間目</td>
+								<td>14:30 - 15:10</td>
+							</tr>
+							<tr class="schedule__content">
+								<td>8時間目</td>
+								<td>15:15 - 15:55</td>
+							</tr>
+						</table>
 					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-4 col-md-offset-2">
-						<div class="info info-horizontal">
-							<div class="icon icon-info">
-								<i class="material-icons">description</i>
-							</div>
-							<div class="description">
-								<h4 class="info-title">Q.　どうすれば、英語を話せるようになりますか？</h4>
-								<p>
-									A.　その方の英語を話したいという欲求の度合いによって私の回答は様々です。でも本当に絶対、普通に英語が話せて外国人とコミュニケーションが出来て、あわよくば海外で働きたいと思っている方は続きを読んで下さい。趣味でいい方は読まないで下さいね。
-								</p>
-								<ol>
-									<li>英語が出来ない」と、呪文のように唱えるのをやめる。</li>
-									<li>英会話の優先順位を上げる。</li>
-									<li>自分が話せている姿を毎日想像して努力を続ける。</li>
-								</ol>
-								<p>要約すればこの３点です。</p>
-								<ol>
-									<li>は自分と他人への言い訳なので戦う前から負けを認めているようなものです。 無駄なので、やめて下さい。メンタルブロックがかかって脳がそう思い込んでしまい悪影響です。</li>
-									<li>「今日は忙しいので会社休むわ。」という人は少ないでしょう？　つまり自分の生活にとって重要なことはそんなに簡単にやめられないのです。その他、人間としてしなければいけないこと例えば食事や排泄。これらの生命活動や日本語での会話や仕事は非常に高い優先順位にあります。その次に大事なことを英語に出来るかどうかが上達の鍵を握っています。そして、決めたらその時間は必ずすることです。</li>
-									<li>はダイエットとよく似ていますが、毎日続けることが大事です。我流で成功する方 もおられますが、これだけダイエット補助食などが売れているのは、やはり効率的に また健康的にそして、定期的に行えるというメリットがあるからではないでしょうか？日本にいながら、英語を話せるようになるというのは、太る体質の方が、ダイ エットをして痩せることと似ています。つまり自然に逆らっているので、弛まぬ努力 が必要なのです。効率的に行いたい方はサンミハールに来て下さい。長い人生の中で
-										ほんの数年、楽しみながらこの努力を続ければ、自然に海外ドラマやニュースを英語で見たり、英字新聞を読めるようになってリバウンドすることなくレベルを保てるよ うな英語人生が送れるようになります。<br>
-										明日より若い今日の脳を最大限に活用されますよう。スクールでお待ちしております。
-									</li>
-								</ol>
-							</div>
-						</div>
-
+					<div class="col-md-3">
+						<table class="schedule">
+							<tr class="schedule__content">
+								<td>9時間目</td>
+								<td>16:00 - 16:40</td>
+							</tr>
+							<tr class="schedule__content">
+								<td>10時間目</td>
+								<td>16:45 - 17:25</td>
+							</tr>
+							<tr class="schedule__content">
+								<td>11時間目</td>
+								<td>17:30 - 18:10</td>
+							</tr>
+							<tr class="schedule__content">
+								<td>12時間目</td>
+								<td>18:15 - 18:55</td>
+							</tr>
+						</table>
 					</div>
-
-					<div class="col-md-4">
-						<div class="info info-horizontal">
-							<div class="icon icon-success">
-								<i class="material-icons">feedback</i>
-							</div>
-							<div class="description">
-								<h4 class="info-title">Q.　自分で文章を作るのが大変です。辞書では、しっくり来る訳がないことも多いし。</h4>
-								<p>
-									A.　単語をそのまま訳すととんでもない文章になることがありますね。例えば友達と電話で話していて「いまからそっちに行くわ。」は、"I'm going there from now." ではなく、"I'm coming there from
-									now."です。「go＝行く」と覚えたのに答は反対の"come"です。"come"を辞書でひくと「〈人・動物・車などが〉〈話し手のほうへ〉（やって）来る；〈聞き手のほうへ〉行く」と書かれているのですが、「行く」という日本語を和英辞典で調べても"go",
-									"leave"などの単語はすぐに出てくるのですが、"come"はずっと下のほうに書かれています。独学で完全な文章を作るとなると、辞書を端から端まで読んで、尚且つ文法書と確かめながら作っていく作業が少なからず必要ですし、それでもなかなかネイティブのような発想の完全な文章を作るのは難しいです。サンミハールでは日本語から英語ではなくて英単語の持つ本来のニュアンスを覚えて使っていただけるよう、たくさんの例文を使って単語を理解することをお勧めしています。辞書を書かれた先生方は限られたスペースに一語を選ぶという究極の選択をして書かれています。文法書もしかり。辞書で書ききれていないニュアンスは、語学のプロ、サンミハールの教師に聞くのが早くて賢い方法です。
-									ちなみに"come"は話し手と聞き手が近づき、"go"は離れるというニュアンスで覚えるとまちがえにくくなりますよ。
-								</p>
-							</div>
-						</div>
+					<div class="col-md-3">
+						<table class="schedule">
+							<tr class="schedule__content">
+								<td>13時間目</td>
+								<td>19:00 - 19:40</td>
+							</tr>
+							<tr class="schedule__content">
+								<td>14時間目</td>
+								<td>19:45 - 20:25</td>
+							</tr>
+						</table>
 					</div>
 				</div>
-				<div class="row">
-					<div class="col-md-4 col-md-offset-2">
-						<div class="info info-horizontal">
-							<div class="icon icon-success">
-								<i class="material-icons">check_circle</i>
-							</div>
-							<div class="description">
-								<h4 class="info-title">Q.　聞き取りが出来るようになりたいのですが。</h4>
-								<p>
-									A.　いっぱい聞いてもなかなか聞き取りが出来ない方は、DICTATION＝聞き取り＋書き取りの練習をやってみてはいかがでしょうか？自分の聞けないところが目で見て分かります。今はインターネットでも無料の教材がたくさんあるので、利用されたら良いと思います。細かいカウンセリングはスクールでしています。ご遠慮なくお尋ね下さいね。
-								</p>
-							</div>
-						</div>
 
-					</div>
-
-					<div class="col-md-4">
-						<div class="info info-horizontal">
-							<div class="icon icon-danger">
-								<i class="material-icons">help</i>
-							</div>
-							<div class="description">
-								<h4 class="info-title">Any other questions we can answer?</h4>
-								<p>We are happy to help you.
-									<a href="index.html#contactus">Contact us</a>.</p>
-							</div>
-						</div>
-					</div>
+				<div class="text-center u-margin-top-large">
+					<h4 class="title">
+						フリーカンバセーション
+					</h4>
+					<h4>月～金曜日：1:45-2:25と2:30-3:10 の1日２回</h4>
 				</div>
+
+
+
 			</div>
+			<!-- container -->
 
 		</div>
-		<!-- container -->
 
-		<!--     *********     END FAQ     *********      -->
+		<!--     *********     END DAILY SCHEDULE     *********      -->
 
 		<hr>
 
