Add events and daily theme section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
   <meta name="robots" content="ALL">
   <meta name="keywords" content="英会話　神戸, 英会話　三宮, 英会話　マンツーマン, 英会話サンミハールランゲージサービス　サンミハール, Sun Mihall, Sunmihall">
   <meta name="author" content="神戸・三宮の英会話サンミハールランゲージサービス">
-  <meta name="Description" content="英会話なら神戸・三宮のサンミハールランゲージサービス。教室は元町からも5分。医療、航空、貿易、ビジネス、留学そしてやり直しの英語をマンツーマンで効果的に。授業はネイティブ。またカウンセリングは日本人スタッフと楽しく目標達成まで毎回でも無料。日常英会話上達。英検、TOEIC、TOEFL、IELTS他試験対策も万全です。マンツーマン月謝制とチケット制が選べるスクールでお得にレッスン。神戸三宮で無料体験レッスン受付中！" />
+  <meta name="Description" content="英会話なら神戸・三宮のサンミハールランゲージサービス。教室は元町からも5分。医療、航空、貿易、ビジネス、留学そしてやり直しの英語をマンツーマンで効果的に。授業はネイティブ。またカウンセリングは日本人スタッフと楽しく目標達成まで毎回でも無料。日常英会話上達。英検、TOEIC、TOEFL、IELTS他試験対策も万全です。マンツーマン月謝制とチケット制が選べるスクールでお得にレッスン。神戸三宮で無料体験レッスン受付中！"
+  />
 
   <meta property="og:title" content="神戸・三宮の英会話サンミハールランゲージサービス">
   <meta property="og:type" content="school">
@@ -36,8 +37,10 @@
   <title>サンミハール　| 英会話　神戸　三宮　マンツーマン 英会話サンミハール | 神戸・三宮の英会話サンミハールランゲージサービス</title>
 
   <!--     Fonts and icons     -->
-  <link rel=" stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
+  <link rel=" stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"
+  />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"
+  />
 
   <!-- CSS Files -->
   <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
@@ -89,7 +92,8 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="index.html">
-          <img id="sunmihall-logo" src="assets/img/navbar-logo-white.png" alt="神戸・三宮の英会話サンミハールランゲージサービス" height="120%" width="auto">
+          <img id="sunmihall-logo" src="assets/img/navbar-logo-white.png" alt="神戸・三宮の英会話サンミハールランゲージサービス" height="120%"
+            width="auto">
         </a>
       </div>
 
@@ -297,7 +301,7 @@
         <!-- DAILY THEME -->
         <!-- <div class="row text-center">
           <div class="col-md-8 col-md-offset-2">
-            <h2 class="title">デイリーテーマ</h2>
+
             <h4 id="totd-date"></h4>
             <h2 id="totd-textbox"></h2>
           </div>
@@ -391,8 +395,7 @@
                 <div class="description">
                   <h4 class="info-title text-left">11月新入会者限定！入会金割引キャンペーン</h4>
                   <p class="text-dark-gray  text-left">
-                    11月に新たに入会される方のみの特典です。ホームページ見ました！で入会金が通常10,800円(税込)のところ50％OFF！
-                    （但し、初回ご来校当日入会または体験レッスン後即日入会の場合に適用。）
+                    11月に新たに入会される方のみの特典です。ホームページ見ました！で入会金が通常10,800円(税込)のところ50％OFF！ （但し、初回ご来校当日入会または体験レッスン後即日入会の場合に適用。）
                   </p>
                 </div>
               </div>
@@ -404,11 +407,10 @@
                 <div class="description">
                   <h4 class="info-title text-left">クリスマスキャンペーン</h4>
                   <p class="text-dark-gray  text-left">
-                    期間2018年11月15日から12月末日まで<br>
-                    お得な40レッスン以上のチケットをご購入されるとプレゼントがついて更にお得になるキャンペーンです。<br>
-                    ★プライベート40レッスンご購入でプライベート１レッスンプレゼント<br>
-                    ★プライベート60レッスンご購入でプライベート2レッスンプレゼント<br><br>
-                    他、詳しくはスクールにお問合せください。
+                    期間2018年11月15日から12月末日まで<br> お得な40レッスン以上のチケットをご購入されるとプレゼントがついて更にお得になるキャンペーンです。
+                    <br> ★プライベート40レッスンご購入でプライベート１レッスンプレゼント
+                    <br> ★プライベート60レッスンご購入でプライベート2レッスンプレゼント
+                    <br><br> 他、詳しくはスクールにお問合せください。
                   </p>
                 </div>
               </div>
@@ -456,8 +458,7 @@
               </ul> -->
 
               <p class="text-dark-gray">
-                月1回から8回までの月謝制や、まとめてお得なチケット制など質の高いネイティブ講師のマンツーマンの個人レッスンを低料金でご提案致します。また、受け放題のフリーカンバセーションは何回受けても1ヶ月￥9,180で超お得！<br>
-                個人（マンツーマン）で英会話レッスンを受けられたい方、WEB・Skypeを使ってオンラインで英会話レッスンを受けられたい方、お友達やご夫婦の2人で一緒に英会話レッスンを受けられたい方、少人数のグループで自由に英会話を楽しみたい方など様々なレッスンスタイル、料金プランをお選び頂けます。
+                月1回から8回までの月謝制や、まとめてお得なチケット制など質の高いネイティブ講師のマンツーマンの個人レッスンを低料金でご提案致します。また、受け放題のフリーカンバセーションは何回受けても1ヶ月￥9,180で超お得！<br>                個人（マンツーマン）で英会話レッスンを受けられたい方、WEB・Skypeを使ってオンラインで英会話レッスンを受けられたい方、お友達やご夫婦の2人で一緒に英会話レッスンを受けられたい方、少人数のグループで自由に英会話を楽しみたい方など様々なレッスンスタイル、料金プランをお選び頂けます。
               </p>
               <a href="pricing.html" class="btn btn-primary margin-top-small">
                 レッスン・料金プランを詳しく見る
@@ -682,8 +683,7 @@
                     <li>ご予算に合わせてしかも低料金で無理なく計画的に英会話レッスンを受けられます。遠慮なくご相談ください。</li>
                     <li>無理な入会はさせません。学びたいという気持ちが一番大事です。説明を聞きに来られても無料体験レッスンを受けられても執拗な勧誘は一切致しません。</li>
                     <li>授業はネイティブ、授業以外英会話の質問に至るまですべては日本人スタッフが日本語で対応致します。</li>
-                    <li>有効期限内であればいつでも解約が出来ます。未使用の受講料の80％は全てご返金致します。
-                      いろいろ悩んでいるより、一度見学に来られてはいかがでしょうか？同じ悩みを持って語学を始めた日本人スタッフが何でもご質問にお答えさせていただきます。1981年の創立以来、ひとりひとりを大切にをモットーに、多くの世界の架け橋になる方々を輩出して来ました。ちょっとお茶をするような気分でのぞいてみてください。小さいけれど一流の教師と家族のようなスタッフがあなたの夢を現実に近づけます。
+                    <li>有効期限内であればいつでも解約が出来ます。未使用の受講料の80％は全てご返金致します。 いろいろ悩んでいるより、一度見学に来られてはいかがでしょうか？同じ悩みを持って語学を始めた日本人スタッフが何でもご質問にお答えさせていただきます。1981年の創立以来、ひとりひとりを大切にをモットーに、多くの世界の架け橋になる方々を輩出して来ました。ちょっとお茶をするような気分でのぞいてみてください。小さいけれど一流の教師と家族のようなスタッフがあなたの夢を現実に近づけます。
                     </li>
                   </ol>
                 </h5>
@@ -843,47 +843,40 @@
 
 
 
-    <!-- <div class="cd-section" id="events">
+    <div class="cd-section" id="events">
 
-      <div class="container"> -->
+      <div class="container">
 
-    <!--     *********     FEATURES 3      *********      -->
+        <!--     *********     FEATURES 3      *********      -->
 
-    <!-- <div class="features-3">
+        <div class="features-3">
           <div class="row">
             <div class="col-md-5">
-              <div class="facebook-embed"> -->
+              <div class="facebook-embed">
 
 
-    <!-- <div class="fb-page" style="width: auto;" data-href="https://www.facebook.com/pg/sunmihall/events/?ref=page_internal"
+                <div class="fb-page" style="width: auto;" data-href="https://www.facebook.com/pg/sunmihall/events/?ref=page_internal"
                   data-tabs="events" data-small-header="false" data-adapt-container-width="true" data-hide-cover="true"
                   data-show-facepile="true">
                   <blockquote cite="https://www.facebook.com/pg/sunmihall/events/?ref=page_internal" class="fb-xfbml-parse-ignore">
                     <a href="https://www.facebook.com/pg/sunmihall/events/?ref=page_internal">英会話のサンミハール　Sun Mihall Language Service</a>
                   </blockquote>
-                </div> -->
-
-    <!-- <iframe src="https://calendar.google.com/calendar/embed?title=Upcoming%20Events&amp;mode=AGENDA&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=9qldcojmbklav5u5b5ll201p54%40group.calendar.google.com&amp;color=%23691426&amp;ctz=Asia%2FTokyo"
-                  style="border:solid 1px #777" width="100%" height="600" frameborder="0" scrolling="no">
-                </iframe> -->
+                </div>
 
 
 
-    <!-- </div>
+              </div>
             </div>
             <div class="col-md-7">
 
-              <br /><br /> -->
-    <!-- Some <br /> tags to push the text to align with the image, you can remove it if you have more text on the right side :-) -->
-
-    <!-- <h2 class="title">School Schedule</h2>
+              <h2 class="title">デイリーテーマ・イベント</h2>
 
               <div class="info info-horizontal">
                 <div class="icon icon-primary">
                   <i class="material-icons">chat_bubble_outline</i>
                 </div>
                 <div class="description">
-                  <h4 class="info-title">Free Conversation</h4>
+                  <h4 class="info-title">デイリーテーマ</h4>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque magni sequi amet consectetur!
                     Molestiae autem tempore aliquid adipisci minus beatae accusamus, repudiandae assumenda
                     asperiores totam architecto, dolores deleniti necessitatibus esse.</p>
@@ -895,7 +888,7 @@
                   <i class="material-icons">calendar_today</i>
                 </div>
                 <div class="description">
-                  <h4 class="info-title">School Events</h4>
+                  <h4 class="info-title">イベント</h4>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed voluptates magnam illo
                     animi, beatae perspiciatis temporibus nostrum. Cum vel aliquam, aperiam consequuntur,
                     dicta, tempore non cumque reiciendis explicabo temporibus praesentium!</p>
@@ -904,14 +897,14 @@
             </div>
           </div>
 
-        </div> -->
+        </div>
 
-    <!--     *********    END FEATURES 3      *********      -->
+        <!--     *********    END FEATURES 3      *********      -->
 
-    <!-- </div> -->
-    <!-- container -->
+      </div>
+      <!-- container -->
 
-    <!-- </div> -->
+    </div>
 
 
 
@@ -1029,7 +1022,8 @@
           </div>
         </div>
 
-        <a href="https://www.youtube.com/watch?v=MreeiBt7yMM&list=UUUDPTYAJh42HoaeHtKXQv1w&index=2" target="_blank" class="btn btn-danger btn-raised" style="width: 200px">
+        <a href="https://www.youtube.com/watch?v=MreeiBt7yMM&list=UUUDPTYAJh42HoaeHtKXQv1w&index=2" target="_blank"
+          class="btn btn-danger btn-raised" style="width: 200px">
           <i class="fa fa-play">　</i>Matt先生　</a>
         <a href="about.html" class="btn btn-primary btn-raised" style="width: 200px">About</a>
 
