--- a/about.html
+++ b/about.html
@@ -46,9 +46,9 @@
 
 	<!-- CSS Files -->
 	<link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-	<!-- <link rel="stylesheet" href="assets/css/style.css"> -->
-	<link rel="stylesheet" href="assets/css/main1.css">
-	<link rel="stylesheet" href="assets/css/main2.css">
+	<link rel="stylesheet" href="assets/css/style.css">
+	<!-- <link rel="stylesheet" href="assets/css/main1.css"> -->
+	<!-- <link rel="stylesheet" href="assets/css/main2.css"> -->
 
 </head>
 
@@ -234,9 +234,11 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<h4>神戸・三宮の英会話サンミハールランゲージサービスの</h4>
 					<h1 class="title">英会話サンミハールについて</h1>
-					<!-- <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores non mollitia beatae, culpa voluptates,
-						autem.
-					</h4> -->
+					<a href="https://www.facebook.com/sunmihall/" target="_blank" style="color: #fff;">
+						<h2>
+							<i class="fa fa-facebook-square"></i>
+						</h2>
+					</a>
 					<br>
 					<br>
 					<br>
@@ -677,6 +679,13 @@
 					<li>
 						<a href="about.html">
 							About Us
+						</a>
+					</li>
+					<li>
+						<a href="https://www.facebook.com/sunmihall/" target="_blank">
+							<h4>
+								<i class="fa fa-facebook-square"></i>
+							</h4>
 						</a>
 					</li>
 				</ul>
