--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 
   <!-- CSS Files -->
   <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-  <!-- <link rel="stylesheet" href="assets/css/style.css"> -->
-  <link rel="stylesheet" href="assets/css/main1.css">
-  <link rel="stylesheet" href="assets/css/main2.css">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <!-- <link rel="stylesheet" href="assets/css/main1.css"> -->
+  <!-- <link rel="stylesheet" href="assets/css/main2.css"> -->
 
   <!-- Google reCaptcha -->
   <script src='https://www.google.com/recaptcha/api.js'></script>
@@ -819,7 +819,8 @@
                 </div>
                 <div class="description">
                   <h4 class="info-title">デイリーテーマ</h4>
-                  <p>For the availablity and theme of our free conversation classes, please check out or Facebook events page.</p>
+                  <p>For the availablity and theme of our free conversation classes, please check out our
+                    Facebook events page.</p>
                 </div>
               </div>
 
@@ -829,7 +830,9 @@
                 </div>
                 <div class="description">
                   <h4 class="info-title">イベント</h4>
-                  <p>Here at Sun Mihall, we hold various seasonal events for our students to gather, to get to know each other, as well as being a great chance to socialise and migle with the teachers and staff from Sun Mihall.</p>
+                  <p>Here at Sun Mihall, we hold various seasonal events for our students to gather and
+                    get to know each other, as well as being a great chance to socialise and mingle with
+                    the teachers and staff from Sun Mihall.</p>
                 </div>
               </div>
             </div>
@@ -1224,6 +1227,13 @@
           <li>
             <a href="about.html">
               About Us
+            </a>
+          </li>
+          <li>
+            <a href="https://www.facebook.com/sunmihall/" target="_blank">
+              <h4>
+                <i class="fa fa-facebook-square"></i>
+              </h4>
             </a>
           </li>
         </ul>
