--- a/lesson-course-airline.html
+++ b/lesson-course-airline.html
@@ -22,7 +22,8 @@
 	<meta name="robots" content="ALL">
 	<meta name="keywords" content="英会話　神戸, 英会話　三宮, 　英会話　マンツーマン, 英会話サンミハールランゲージサービス　サンミハール, Sun Mihall, Sunmihall">
 	<meta name="author" content="神戸・三宮の英会話サンミハールランゲージサービス">
-	<meta name="Description" content="TOEFL、IELTS対策なら神戸三宮の英会話スクール、サンミハールランゲージサービス。授業はネイティブ。またカウンセリングは日本人スタッフと楽しく目標達成まで毎回でも無料。日常英会話上達と英検、TOEIC、TOEFL、IELTS他試験対策を同時に学べます。マンツーマン月謝制とチケット制が選べるスクールでお得にレッスン。無料体験レッスン受付中！" />
+	<meta name="Description" content="TOEFL、IELTS対策なら神戸三宮の英会話スクール、サンミハールランゲージサービス。授業はネイティブ。またカウンセリングは日本人スタッフと楽しく目標達成まで毎回でも無料。日常英会話上達と英検、TOEIC、TOEFL、IELTS他試験対策を同時に学べます。マンツーマン月謝制とチケット制が選べるスクールでお得にレッスン。無料体験レッスン受付中！"
+	/>
 
 	<meta property="og:title" content="神戸・三宮の英会話サンミハールランゲージサービス">
 	<meta property="og:type" content="school">
@@ -34,17 +35,20 @@
 
 	<title>サンミハール　| 英会話　神戸　三宮　マンツーマン 英会話サンミハール | 神戸・三宮の英会話サンミハールランゲージサービス</title>
 
-	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'
+	/>
 
 	<!--     Fonts and icons     -->
-	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
+	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"
+	/>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"
+	/>
 
 	<!-- CSS Files -->
 	<link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-	<!-- <link rel="stylesheet" href="assets/css/style.css"> -->
-	<link rel="stylesheet" href="assets/css/main1.css">
-	<link rel="stylesheet" href="assets/css/main2.css">
+	<link rel="stylesheet" href="assets/css/style.css">
+	<!-- <link rel="stylesheet" href="assets/css/main1.css"> -->
+	<!-- <link rel="stylesheet" href="assets/css/main2.css"> -->
 
 	<!-- Google reCaptcha -->
 	<script src='https://www.google.com/recaptcha/api.js'></script>
@@ -69,7 +73,8 @@
 					<span class="icon-bar"></span>
 				</button>
 				<a class="navbar-brand" href="index.html">
-					<img id="sunmihall-logo" src="assets/img/navbar-logo-white.png" alt="神戸・三宮の英会話サンミハールランゲージサービス" height="120%" width="auto">
+					<img id="sunmihall-logo" src="assets/img/navbar-logo-white.png" alt="神戸・三宮の英会話サンミハールランゲージサービス" height="120%"
+					  width="auto">
 				</a>
 			</div>
 
@@ -457,8 +462,7 @@
 											<a href="#">ICAO標準航空英語試験 </a>
 										</h3>
 										<p>
-											ICAO-International Civil Aviation
-											Organization（国際民間航空機関）の略。国連の専門機関の1つ。2008年3月以降、操縦士や管制官等は航空英語能力を証明することが要件となり、語学能力レベルは6段階のうち、実用レベル（レベル4）以上であることが必要です。実用レベル（level-4）の証明の有効期間は3年。また国土交通省の東京航空局、大阪航空局の両局内の情報官の一部の方々にもICAO標準航空英語のlevel-4(Operational
+											ICAO-International Civil Aviation Organization（国際民間航空機関）の略。国連の専門機関の1つ。2008年3月以降、操縦士や管制官等は航空英語能力を証明することが要件となり、語学能力レベルは6段階のうち、実用レベル（レベル4）以上であることが必要です。実用レベル（level-4）の証明の有効期間は3年。また国土交通省の東京航空局、大阪航空局の両局内の情報官の一部の方々にもICAO標準航空英語のlevel-4(Operational
 											level)が必要とされるようになりました。残念ながら、必須である言語技能の習得に関しては個人的に試験対策本などを利用して行うより方途がなかったのですが、神戸ではサンミハールが初めて「ICAO標準航空英語試験の対策プログラム」を実試験の形式に沿った会話形式で行うようになりパイロットを始め、これから航空業界で働きたいと思っている方々にもお役に立っています。
 										</p>
 										<h4>授業内容</h4>
@@ -765,6 +769,13 @@
 					<li>
 						<a href="about.html">
 							About Us
+						</a>
+					</li>
+					<li>
+						<a href="https://www.facebook.com/sunmihall/" target="_blank">
+							<h4>
+								<i class="fa fa-facebook-square"></i>
+							</h4>
 						</a>
 					</li>
 				</ul>
