--- a/lesson-course-everyday.html
+++ b/lesson-course-everyday.html
@@ -22,7 +22,8 @@
 	<meta name="robots" content="ALL">
 	<meta name="keywords" content="英会話　神戸, 英会話　三宮, 　英会話　マンツーマン, 英会話サンミハールランゲージサービス　サンミハール, Sun Mihall, Sunmihall">
 	<meta name="author" content="神戸・三宮の英会話サンミハールランゲージサービス">
-	<meta name="Description" content="TOEFL、IELTS対策なら神戸三宮の英会話スクール、サンミハールランゲージサービス。授業はネイティブ。またカウンセリングは日本人スタッフと楽しく目標達成まで毎回でも無料。日常英会話上達と英検、TOEIC、TOEFL、IELTS他試験対策を同時に学べます。マンツーマン月謝制とチケット制が選べるスクールでお得にレッスン。無料体験レッスン受付中！" />
+	<meta name="Description" content="TOEFL、IELTS対策なら神戸三宮の英会話スクール、サンミハールランゲージサービス。授業はネイティブ。またカウンセリングは日本人スタッフと楽しく目標達成まで毎回でも無料。日常英会話上達と英検、TOEIC、TOEFL、IELTS他試験対策を同時に学べます。マンツーマン月謝制とチケット制が選べるスクールでお得にレッスン。無料体験レッスン受付中！"
+	/>
 
 	<meta property="og:title" content="神戸・三宮の英会話サンミハールランゲージサービス">
 	<meta property="og:type" content="school">
@@ -34,17 +35,20 @@
 
 	<title>サンミハール　| 英会話　神戸　三宮　マンツーマン 英会話サンミハール | 神戸・三宮の英会話サンミハールランゲージサービス</title>
 
-	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'
+	/>
 
 	<!--     Fonts and icons     -->
-	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
+	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"
+	/>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"
+	/>
 
 	<!-- CSS Files -->
 	<link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-	<!-- <link rel="stylesheet" href="assets/css/style.css"> -->
-	<link rel="stylesheet" href="assets/css/main1.css">
-	<link rel="stylesheet" href="assets/css/main2.css">
+	<link rel="stylesheet" href="assets/css/style.css">
+	<!-- <link rel="stylesheet" href="assets/css/main1.css"> -->
+	<!-- <link rel="stylesheet" href="assets/css/main2.css"> -->
 
 	<!-- Google reCaptcha -->
 	<script src='https://www.google.com/recaptcha/api.js'></script>
@@ -69,7 +73,8 @@
 					<span class="icon-bar"></span>
 				</button>
 				<a class="navbar-brand" href="index.html">
-					<img id="sunmihall-logo" src="assets/img/navbar-logo-white.png" alt="神戸・三宮の英会話サンミハールランゲージサービス" height="120%" width="auto">
+					<img id="sunmihall-logo" src="assets/img/navbar-logo-white.png" alt="神戸・三宮の英会話サンミハールランゲージサービス" height="120%"
+					  width="auto">
 				</a>
 			</div>
 
@@ -472,8 +477,7 @@
 										</p>
 										<h4>レッスン内容の例</h4>
 										<p>
-											★ 英語初心者の方・・・簡単な表現で出来る限り多くの状況設定をして、会話パターンの練習<br>
-											★ 中級以上の方・・・仕事内容に合わせたケーススタディでの会話練習
+											★ 英語初心者の方・・・簡単な表現で出来る限り多くの状況設定をして、会話パターンの練習<br> ★ 中級以上の方・・・仕事内容に合わせたケーススタディでの会話練習
 										</p>
 										<p>海外赴任者の奥様、ご家族の皆様向けのレッスンも行っています。 サンミハールの教師は皆英語ネイティブですから、海外（日本）で生活しており、彼らにとって生徒さんの心情は非常に理解し易く、英語のみならず、海外で生活するための様々なアドバイスが出来ます
 										</p>
@@ -773,6 +777,13 @@
 					<li>
 						<a href="about.html">
 							About Us
+						</a>
+					</li>
+					<li>
+						<a href="https://www.facebook.com/sunmihall/" target="_blank">
+							<h4>
+								<i class="fa fa-facebook-square"></i>
+							</h4>
 						</a>
 					</li>
 				</ul>
