--- a/lesson-course-medical.html
+++ b/lesson-course-medical.html
@@ -46,9 +46,9 @@
 
 	<!-- CSS Files -->
 	<link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-	<!-- <link rel="stylesheet" href="assets/css/style.css"> -->
-	<link rel="stylesheet" href="assets/css/main1.css">
-	<link rel="stylesheet" href="assets/css/main2.css">
+	<link rel="stylesheet" href="assets/css/style.css">
+	<!-- <link rel="stylesheet" href="assets/css/main1.css"> -->
+	<!-- <link rel="stylesheet" href="assets/css/main2.css"> -->
 
 	<!-- Google reCaptcha -->
 	<script src='https://www.google.com/recaptcha/api.js'></script>
@@ -718,6 +718,13 @@
 					<li>
 						<a href="about.html">
 							About Us
+						</a>
+					</li>
+					<li>
+						<a href="https://www.facebook.com/sunmihall/" target="_blank">
+							<h4>
+								<i class="fa fa-facebook-square"></i>
+							</h4>
 						</a>
 					</li>
 				</ul>
