--- a/lesson-course.html
+++ b/lesson-course.html
@@ -22,7 +22,8 @@
 	<meta name="robots" content="ALL">
 	<meta name="keywords" content="英会話　神戸, 英会話　三宮, 　英会話　マンツーマン, 英会話サンミハールランゲージサービス　サンミハール, Sun Mihall, Sunmihall">
 	<meta name="author" content="神戸・三宮の英会話サンミハールランゲージサービス">
-	<meta name="Description" content="英会話なら神戸・三宮のサンミハールランゲージサービス。教室は元町からも5分。医療、航空、貿易、ビジネス、留学そしてやり直しの英語をマンツーマンで効果的に。授業はネイティブ。またカウンセリングは日本人スタッフと楽しく目標達成まで毎回でも無料。日常英会話上達。英検、TOEIC、TOEFL、IELTS他試験対策も万全です。マンツーマン月謝制とチケット制が選べるスクールでお得にレッスン。神戸三宮で無料体験レッスン受付中！" />
+	<meta name="Description" content="英会話なら神戸・三宮のサンミハールランゲージサービス。教室は元町からも5分。医療、航空、貿易、ビジネス、留学そしてやり直しの英語をマンツーマンで効果的に。授業はネイティブ。またカウンセリングは日本人スタッフと楽しく目標達成まで毎回でも無料。日常英会話上達。英検、TOEIC、TOEFL、IELTS他試験対策も万全です。マンツーマン月謝制とチケット制が選べるスクールでお得にレッスン。神戸三宮で無料体験レッスン受付中！"
+	/>
 
 	<meta property="og:title" content="神戸・三宮の英会話サンミハールランゲージサービス">
 	<meta property="og:type" content="school">
@@ -33,18 +34,21 @@
 
 	<title>サンミハール　| 英会話　神戸　三宮　マンツーマン 英会話サンミハール | 神戸・三宮の英会話サンミハールランゲージサービス</title>
 
-	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'
+	/>
 
 	<!--     Fonts and icons     -->
 	<link rel="
-	  stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
+	  stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"
+	/>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"
+	/>
 
 	<!-- CSS Files -->
 	<link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-	<!-- <link rel="stylesheet" href="assets/css/style.css"> -->
-	<link rel="stylesheet" href="assets/css/main1.css">
-	<link rel="stylesheet" href="assets/css/main2.css">
+	<link rel="stylesheet" href="assets/css/style.css">
+	<!-- <link rel="stylesheet" href="assets/css/main1.css"> -->
+	<!-- <link rel="stylesheet" href="assets/css/main2.css"> -->
 
 	<!-- Google reCaptcha -->
 	<script src='https://www.google.com/recaptcha/api.js'></script>
@@ -69,7 +73,8 @@
 					<span class="icon-bar"></span>
 				</button>
 				<a class="navbar-brand" href="index.html">
-					<img id="sunmihall-logo" src="assets/img/navbar-logo-white.png" alt="神戸・三宮の英会話サンミハールランゲージサービス" height="120%" width="auto">
+					<img id="sunmihall-logo" src="assets/img/navbar-logo-white.png" alt="神戸・三宮の英会話サンミハールランゲージサービス" height="120%"
+					  width="auto">
 				</a>
 			</div>
 
@@ -417,7 +422,7 @@
 
 									<div class="back back-background" style="background-image: url('assets/img/examples/card-project2.jpg');">
 										<div class="card-content">
-											<p class="card-description">テキストは使わず、旬の話題を中心に自由に英会話を楽しんでいただくクラスです。何年も英語を勉強しているのに実際に外国人を目にすると話せない…と言う様な悩みを持たれたことがあるのではないでしょうか。サンミハールの講師と自由に英語で会話を楽しんで頂く中で、ご自身の英会話力を高めて頂こうというものです。<br> 毎日受講して頂ける自由予約制の受け放題コースと2か月毎のチケット制コースがあります。
+											<p class="card-description">テキストは使わず、旬の話題を中心に自由に英会話を楽しんでいただくクラスです。何年も英語を勉強しているのに実際に外国人を目にすると話せない…と言う様な悩みを持たれたことがあるのではないでしょうか。サンミハールの講師と自由に英語で会話を楽しんで頂く中で、ご自身の英会話力を高めて頂こうというものです。<br>												毎日受講して頂ける自由予約制の受け放題コースと2か月毎のチケット制コースがあります。
 											</p>
 											<br>
 											<div class="footer text-center">
@@ -659,6 +664,13 @@
 					<li>
 						<a href="about.html">
 							About Us
+						</a>
+					</li>
+					<li>
+						<a href="https://www.facebook.com/sunmihall/" target="_blank">
+							<h4>
+								<i class="fa fa-facebook-square"></i>
+							</h4>
 						</a>
 					</li>
 				</ul>
