Remove captcha for testing

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <!-- <link rel="stylesheet" href="assets/css/main2.css"> -->
 
   <!-- Google reCaptcha -->
-  <script src='https://www.google.com/recaptcha/api.js'></script>
+  <!-- <script src='https://www.google.com/recaptcha/api.js'></script> -->
 </head>
 
 <body class="landing-page" id="top">
@@ -292,9 +292,6 @@
 
     <div class="container">
       <div id="features" class="section">
-
-
-        <h6 class="text-center">***新しい素敵なホームページはもうすぐ！***</h6>
 
         <h4 class="title text-center">神戸・三宮の英会話サンミハールランゲージサービス</h4>
 
@@ -1046,6 +1043,7 @@
         </div>
         <div class="col-md-5 contact-div">
           <div class="card card-contact">
+
             <form role="form" id="contact-form" method="post" action="contact.php">
               <div class="header header-raised header-blue text-center">
                 <h4 class="card-title">メールでのお問い合わせはこちら</h4>
@@ -1103,9 +1101,9 @@
                 </div>
 
                 <div class="row">
-                  <div class="col-md-6">
+                  <!-- <div class="col-md-6">
                     <div class="g-recaptcha" data-sitekey="6Ldv6HYUAAAAALDLX4TmV8sTlTRdSCMuu5uvxUm7"></div>
-                  </div>
+                  </div> -->
                   <div class="col-md-6">
                     <button type="submit" class="btn btn-primary pull-right">送信
                       <i class="material-icons pull-right" style="margin-left: 10px;">send</i>
@@ -1115,6 +1113,7 @@
               </div>
 
             </form>
+
           </div>
         </div>
         <!-- </div> -->
