Remove Google captcha across all forms

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
               </li>
               <li>
                 <a href="#testimonials">
-                  生徒の声
+                  生徒さんの声
                 </a>
               </li>
               <!-- <li>
@@ -206,11 +206,6 @@
               <li>
                 <a href="lesson-course-corporate.html">
                   英文校正サービス
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  海外赴任準備
                 </a>
               </li>
               <li>
