--- a/about.html
+++ b/about.html
@@ -50,6 +50,9 @@
 	<!-- <link rel="stylesheet" href="assets/css/main1.css"> -->
 	<!-- <link rel="stylesheet" href="assets/css/main2.css"> -->
 
+	<!-- Google reCaptcha -->
+	<!-- <script src='https://www.google.com/recaptcha/api.js'></script> -->
+
 </head>
 
 <body class="blog-posts" id="top">
@@ -643,9 +646,9 @@
 							</div>
 
 							<div class="row">
-								<div class="col-md-5 col-md-offset-1 text-center">
+								<!-- <div class="col-md-5 col-md-offset-1 text-center">
 									<div class="g-recaptcha" data-sitekey="6Ldv6HYUAAAAALDLX4TmV8sTlTRdSCMuu5uvxUm7"></div>
-								</div>
+								</div> -->
 								<div class="col-md-5 text-center">
 									<button class="btn btn-primary btn-raised">
 										送信
