--- a/about.html
+++ b/about.html
@@ -230,7 +230,7 @@
 		</div>
 	</nav>
 
-	<div class="page-header header-filter" data-parallax="true" style="background-image: url('assets/img/bg2-2.jpg');"
+	<div class="page-header header-filter" data-parallax="true" style="background-image: url('assets/img/bg2-2.JPG');"
 	  alt="神戸3 Teachers英会話">
 		<div class="container">
 			<div class="row">
