fixed responsive image for campaign on index page.

--- a/index.html
+++ b/index.html
@@ -372,10 +372,8 @@
           <div class="row">
 
             <div class="col-md-5 col-md-offset-1">
-              <div class="card card-no-shadow-background" style="background-image: url('assets/img/examples/2018-xmas.jpg')">
-                <div class="card-content">
-
-                </div>
+              <div class="card card-no-shadow-background">
+                <img src="assets/img/examples/2018-xmas.jpg" alt="Christmas Campaign">
               </div>
             </div>
 
