updated contact form and staff section title.

--- a/index.html
+++ b/index.html
@@ -848,7 +848,8 @@
     <div class="container">
       <div id="team" class="section text-center">
         <h4 class="title">神戸・三宮の英会話サンミハールランゲージサービス</h4>
-        <h2 class="title">講師・スタッフの紹介</h2>
+        <h2 class="title">チームサンミハール</h2>
+        <h3 class="title">講師・スタッフの紹介</h3>
 
         <div class="team">
           <div class="row">
@@ -1089,7 +1090,7 @@
                   </div>
                 </div>
                 <div class="form-group label-floating">
-                  <label class="control-label">お問い合わせ内容<br>例】本日夜8時以降　土日いつでも電話OK</label>
+                  <label class="control-label">お問い合わせ内容<br>【例】無料体験レッスン希望4/15-18午後6時以降または今週(土)いつでも等</label>
                   <textarea name="message" class="form-control" id="message" rows="6" required></textarea>
                 </div>
 
