--- a/lesson-course-everyday.html
+++ b/lesson-course-everyday.html
@@ -733,7 +733,7 @@
 							</div>
 
 							<div class="form-group label-floating">
-								<label class="control-label">お問い合わせ内容<br>例】本日夜8時以降　土日いつでも電話OK</label>
+<label class="control-label">お問い合わせ内容<br>【例】無料体験レッスン希望4/15-18午後6時以降または今週(土)いつでも等</label>
 								<textarea name="message" class="form-control" rows="4" required></textarea>
 							</div>
 
